--- a/Weather_Database/Weather_Database.ipynb
+++ b/Weather_Database/Weather_Database.ipynb
@@ -1556,10 +1556,10 @@
    "outputs": [],
    "source": [
     "# Set the output file name\n",
-    "# YOUR CODE HERE\n",
+    "output_data_file = \"Weather_Database/cities.csv\"\n",
     "\n",
     "# Export the city_data DataFrame into a CSV file\n",
-    "# YOUR CODE HERE"
+    "city_data_df.to_csv(output_data_file, index_label=\"City_ID\")"
    ]
   },
   {
